# mifsa-ota

./: CMakeLists.txt  README.md  config.cmake.in  config.h.in
client/: CMakeLists.txt  mifsa_ota.pc.in
client/etc/: mifsa_ota_client.json
client/include/mifsa/ota/: client.h
client/src/: client.cpp  client_event.h
client/src/adapter/: adapter.h  client_interface_custom.hpp  client_interface_fdbus.hpp  client_interface_ros.hpp  client_interface_vsomeip.hpp
client/src/adpter/: interface_fdbus.hpp  interface_ros.hpp  interface_vsomeip.hpp
examples/: CMakeLists.txt  sample.c  sample.cpp
examples/sample/: CMakeLists.txt  mifsa_ota_example_sample_test.sh  mifsa_ota_sample_test.sh  sample.cpp
examples/sample_c/: CMakeLists.txt  sample.c
examples/viewer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  viewer.cpp
hawkbit-docker/http/: application.properties  docker-compose.yml
hawkbit-docker/https/: application.properties  docker-compose.yml
hawkbit-docker/https-public/: application.properties  docker-compose.yml
idls/fdbus/: ota.proto
idls/ros/: package.xml
idls/ros/msg/: ControlMessage.msg  Detail.msg  DetailMessage.msg  Domain.msg  DomainMessage.msg  File.msg  Package.msg  Transfer.msg  Upgrade.msg
idls/vsomeip/: ota.fdepl  ota.fidl
idls/vsomeip/etc/: commonapi_mifsa_ota.ini  vsomeip_mifsa_ota_client.json  vsomeip_mifsa_ota_server.json
include/mifsa/ota/: client_interface.h  control_message.h  detail_message.h  domain.h  domain_message.h  interface.h  platform.h  platform_interface.h  provider.h  server_interface.h  setting.h  transfer.h  upgrade.h
include/mifsa/ota/types/: control_message.h  detail_message.h  domain.h  domain_message.h  transfer.h  upgrade.h
server/: CMakeLists.txt  mifsa_ota_server.service.in
server/etc/: mifsa_ota_server.json
server/share/: mifsa_ota_domains.example
server/share/ssl/: genarate-ssl.sh  ssl-ca.cnf  ssl-client.cnf  ssl-server.cnf
server/share/ssl/local/: local-ca.csr  local-server.jks
server/share/ssl/web/: web-ca.csr  web-server.crt  web-server.csr  web-server.jks  web-server.key
server/share/ssl/web-public/: web-server.jks
server/src/: hawkbit_queue.cpp  hawkbit_queue.h  server.cpp  server.h  server_event.h  web_event.h  web_feed.cpp  web_feed.h  web_init.cpp  web_init.h  web_queue.cpp  web_queue.h
server/src/adapter/: adapter.h  server_interface_custom.hpp  server_interface_fdbus.hpp  server_interface_ros.hpp  server_interface_vsomeip.hpp
server/src/adpter/: provider_fdbus.hpp  provider_ros.hpp  provider_vsomeip.hpp
share/: mifsa_ota_client.json.example  mifsa_ota_server.json.example
share/ssl/local/: local-ca.crt  local-ca.key  local-ca.srl  local-server.crt  local-server.csr  local-server.key  local-server.p12
share/ssl/web/: web-ca.crt  web-ca.key  web-ca.srl  web-server.p12
src/: control_message.cpp  detail_message.cpp  domain.cpp  domain_message.cpp  transfer.cpp  upgrade.cpp
src/core/: config_http.h  core.h  distribute_http.cpp  download_http.cpp  helper.h  message_http.cpp  patch_bsdiff.cpp  pull_http.cpp  setting.h  status.h  verify_openssl.cpp
src/hpplib/: httplib.hpp
src/importlib/: httplib.hpp
src/types/: control_message.cpp  detail_message.cpp  domain.cpp  domain_message.cpp  transfer.cpp  upgrade.cpp
src/utils/: dispatch.cpp  dispatch.h  verify.cpp  verify.h
